# docker-infrastructure

./: .gitignore  Makefile  docker-infrastructure.cabal  stack.yaml
postgres-dev/: Dockerfile  postgres-dev-init.sh
stack-build/: Dockerfile  entrypoint.sh  entrypoint.sh.lts-2.22  my_init
stack-build/container_environment/: SANDBOX_NAME
swarm-build/: .dockerignore  Dockerfile
turtle/: Dockerfile
vault-dev/: Dockerfile  vault-entrypoint  vault.hcl
vault-dev/src/: vault-entrypoint.hs
