name:                docker-infrastructure
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable vault-entrypoint
    hs-source-dirs:      vault-dev/src
    main-is:             vault-entrypoint.hs
    ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N

    build-depends:       base
                       , turtle
                       , wreq
                       , lens
                       , text
                       , lens-aeson
                       , http-types
                       , http-client
                       , aeson
                       , process
                       , foldl

    default-language:    Haskell2010
    default-extensions:  OverloadedStrings
                       , MultiWayIf
                       , LambdaCase
                       , ViewPatterns
                       , ScopedTypeVariables